[project]
name = "fish-speech"
version = "2.0.0"
authors = [
    {name = "Fish Audio", email = "oss@fish.audio"},
]
description = "Fish Speech"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["TTS", "Speech"]
license = {text = "Fish Audio Research License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
# Inference-only dependency set. Training/serving/webui deps (datasets, lightning,
# tensorboard, gradio, wandb, grpcio, kui, uvicorn, pydub, pyaudio, modelscope,
# silero-vad) have been removed — none are imported by the inference path
# (fish_speech.models.{dac,text2semantic}.inference).
dependencies = [
    "numpy",
    "click>=8.1.0",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "transformers<=4.57.3",
    "hydra-core>=1.3.2",
    "natsort>=8.4.0",
    "einops>=0.7.0",
    "librosa>=0.10.1",
    "rich>=13.5.3",
    "loguru>=0.6.0",
    "pyrootutils>=1.0.4",
    "resampy>=0.4.3",
    "einx[torch]==0.2.2",
    "loralib>=0.1.2",
    "zstandard>=0.22.0",
    "opencc-python-reimplemented==0.1.7",
    "ormsgpack",
    "tiktoken>=0.8.0",
    "pydantic==2.9.2",
    "cachetools",
    "descript-audio-codec",
    # audiotools from git: the PyPI release (0.7.2) caps protobuf<3.20, which
    # conflicts with ray>=2.52's protobuf>=3.20.3. Upstream main (0.7.4) loosens
    # it to "protobuf<5.0.0". Pinned to a commit for reproducibility.
    "descript-audiotools @ git+https://github.com/descriptinc/audiotools.git@348ebf2034ce24e2a91a553e3171cb00c0c71678",
    "safetensors"
]

[project.optional-dependencies]
stable = [
    "torch==2.8.0",
    "torchaudio",
]
cpu = [
  "torch==2.8.0",
  "torchaudio",
]
cu126 = [
  "torch==2.8.0",
  "torchaudio",
]
cu128 = [
  "torch==2.8.0",
  "torchaudio",
]
cu129 = [
  "torch==2.8.0",
  "torchaudio",
]

[tool.uv]
override-dependencies = [
    # descript-audiotools (transitive via descript-audio-codec) pins protobuf<3.20,
    # but fish-speech's generated proto code requires >=3.20; cap at <6 for API stability
    "protobuf>=3.20.0,<6.0.0",
]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu126" },
    { extra = "cu128" },
    { extra = "cu129" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cu126" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu129", extra = "cu129" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cu126" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu129", extra = "cu129" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fish_speech", "tools"]

[tool.setuptools_scm]
